--- a/css/style.css
+++ b/css/style.css
@@ -18,4 +18,28 @@ a
 {
 	text-decoration: none;
 	color: white;
+	text-align: center;
+	margin: 10px;
+	font-size: 1.8rem;
+	border:1px solid black;
+	border-radius: 5px;
+	box-shadow: -5px 5px rgba(0,0,0,0.4);
+	padding: 5px;
+}
+input, textarea
+{
+	width: 20%;
+	padding: 5px;
+}
+header
+{
+	padding: 1%;
+	margin: 0 auto;
+	width: 80%;
+}
+nav
+{
+	padding: 1%;
+	margin: 0 auto;
+
 }
